# book-app

./: .gitignore  Cargo.toml  GITHUB_ACTIONS_GUIDE.md  LICENSE  MOBILE_BUILD.md  QUICK_START.md  README.md  WINDOWS_DEVELOPER_GUIDE.md  build-android.ps1  build-ios.ps1  iOS_INTEGRATION_GUIDE.md
.cargo/: config.toml
.github/workflows/: ios-build.yml
book-core/: Cargo.toml
book-core/src/: api.rs  configurable_parser.rs  database.rs  defaults.rs  getter.rs  importer.rs  lib.rs  models.rs  platform.rs  scripting.rs
book-egui/: Cargo.toml
book-egui/src/: app.rs  cover_cache.rs  logic.rs  main.rs  main_android.rs  main_ios.rs  state.rs  ui.rs
book-slint/: Cargo.toml
book-slint/src/: app.rs  lib.rs  main.rs
book-slint/src/ui/: app.slint  book_details.slint  discover.slint  library.slint  reader.slint  search.slint  settings.slint
book-slint/src/ui/widgets/: book_card.slint  nav_bar.slint  section.slint  theme.slint
sources/: novelfire.js
