[package]
name = "book-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled", "chrono"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24.0"
epub = "2.1.5"
epub-builder = "0.8.2"
zip = "6.0.0"
base64 = "0.21.0"
chrono = "0.4"
anyhow = "1.0"
futures = "0.3"
once_cell = "1.21"
regex = "1.12"
urlencoding = "2.1"
dirs = "5.0"
log = "0.4"

# Mobile app lifecycle
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.12"
