[package]
name = "book-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
book-core = { path = "../book-core" }
eframe = { version = "0.33.3", features = ["persistence"] }
egui_extras = { version = "0.33.3", features = ["image","all_loaders", "http"] }
image = { version = "0.25", features = ["png", "jpeg"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"

# Mobile support - Android only (iOS uses standard egui/eframe)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.20"
ndk = "0.8"
ndk-context = "0.1"

[features]
default = []
android = []
ios = []

[[bin]]
name = "book-egui"
path = "src/main.rs"
